--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
     "mongoose": "^6.5.3"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
